--- a/app/assets/stylesheets/report/reports.css.scss
+++ b/app/assets/stylesheets/report/reports.css.scss
@@ -173,7 +173,7 @@ $list-width: 220px;
 
     }
     .data-container {
-      background-color: #fff;
+      background-color: black;
       width: 100%;
       overflow-y: auto;
     }
