--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -1,50 +1,67 @@
 <section class="current-status" id="current-status">
   <section id="current-status-normal">
     <div class="header" id="current-status-header">
+
       <div class="header-block">
         <label>Condition</label>
-        <p>First Time Quality (FTQ) Summary Percentage</p>
-        <p id="current-date"></p>
+
+        <p style="font-size: 12px;">First Time Quality (FTQ) Summary Percentage</p>
+
+        <p id="current-date" style="font-size: 12px;"></p>
+
         <p>Early shift</p>
-        <select id="vehicle-select">
-        <option>CF11</option>
-        <option>CF14</option>
-        <option>CF16</option>
+        <select id="vehicle-select" style="font-size: 12px;">
+          <option>CF11</option>
+          <option>CF14</option>
+          <option>CF16</option>
         </select>
       </div>
+
       <div class="header-block">
         <label>Export</label>
         <a class="btn btn-success" id="quick-print">Quick print</a>
         <a class="btn btn-success" onclick="export_report_excel()">Excel</a>
       </div>
+
       <div class="header-block">
         <label>Setting</label>
         <a class="btn btn-primary" id="refresh">Refresh</a>
         <a class="btn btn-primary extra_func_btn" id="target" tag='target'>Target</a>
       </div>
+
       <div class="header-block">
         <label>Custom</label>
         <a class="btn btn-primary extra_func_btn" tag='all_defects'>All defects</a>
         <a class="btn btn-primary extra_func_btn" tag='key_defects'>Key station defects</a>
       </div>
+
       <div class="header-block">
         <label>Current time</label>
+
         <p id="current-clock"></p>
       </div>
     </div>
-    <div id="data_container" class="data-container"></div>
-    <%= render 'snap'%>
+    <div id="data_container" class="data-container">
+
+    </div>
+
+    <!--<%= render 'snap' %>-->
   </section>
+
   <section id="current-status-target" class='current-status-wrapper'>
-     <div class="wrapper-header" id="target-wrapper-header">
-       <a class="back-btn current-status-target-back-btn"><span>FTQ  Summary  Percentage</span></a>
-       <p>Target setting</p>
-     </div>
+    <div class="wrapper-header" id="target-wrapper-header">
+      <a class="back-btn current-status-target-back-btn"><span>FTQ  Summary  Percentage</span></a>
+
+      <p>Target setting</p>
+    </div>
     <div id="target-setting-footer" class="target-setting-footer">
       <div class="footer-left">
         <p>Condition</p>
+
         <p>When Target higher than current FTQ</p>
+
         <p>When Target equal to current FTQ</p>
+
         <p>When Target lower than current FTQ</p>
       </div>
       <div class="footer-right" id="footer-right">
@@ -54,9 +71,11 @@
     </div>
     <div id="target_setting" class="wrapper-current-body"></div>
   </section>
+
   <section id="current-status-all-defects" class='current-status-wrapper'>
     <div class="wrapper-header">
       <a class="back-btn current-status-target-back-btn"><span>FTQ  Summary  Percentage</span></a>
+
       <p>All defects</p>
     </div>
     <div class="wrapper-current-body">
@@ -66,6 +85,7 @@
   <section id="current-status-key-defects" class='current-status-wrapper'>
     <div class="wrapper-header">
       <a class="back-btn current-status-target-back-btn"><span>FTQ  Summary  Percentage</span></a>
+
       <p>Key station defects</p>
     </div>
     <div class="wrapper-current-body">
@@ -73,6 +93,7 @@
     </div>
   </section>
 </section>
+
 <div id="current_status_loader" class="current-status-pageload-overlay" data-opening="M20,15 50,30 50,30 30,30 Z;M0,0 80,0 50,30 20,45 Z;M0,0 80,0 60,45 0,60 Z;M0,0 80,0 80,60 0,60 Z" data-closing="M0,0 80,0 60,45 0,60 Z;M0,0 80,0 50,30 20,45 Z;M20,15 50,30 50,30 30,30 Z;M30,30 50,30 50,30 30,30 Z">
   <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 80 60" preserveAspectRatio="none">
     <path d="M30,30 50,30 50,30 30,30 Z"/>
@@ -86,7 +107,172 @@
 <% end %>
 
 <script>
-    $(document).ready(function(){
-        Report.init("current_status");
-    })
+    $(document).ready(function () {
+//        Report.init("current_status");
+        var ClientHeight = document.documentElement.clientHeight;
+        $('#data_container').css({
+            height: (ClientHeight - 100) + 'px'
+        });
+
+        /* for (var j = 0; j < 21; j = j + 8) {
+         /!*分组*!/
+         }
+         */
+        for (var i = 0; i < 8; i++) {
+            if (i < 3) {
+                console.log("<3===" + i);
+                $('<div class="col-md-3"><div class="col-sm-9"><div class="box">' +
+                        '<div class="box-title">iQ1 Body</div><div style="display: inline-flex"><div class="left-number">86%</div>' +
+                        '<div class="right-content"><div class="content"><strong>40</strong><p>OPEN DEFECTS</p></div>' +
+                        '<div class="content"><strong>47</strong><p>VEHICLE PASS</p></div></div></div></div></div><%= image_tag "/assets/auto_arrow.gif",:class => 'col-md-3',:style=>'margin-top:60px;'%></div>').appendTo('#data_container').ready(function () {
+                });
+            } else if (i == 3) {
+                console.log("3===" + i);
+                $('<div class="col-md-3"><div class="col-sm-9"><div class="box">' +
+                        '<div class="box-title">iQ1 Body</div><div style="display: inline-flex"><div class="left-number">86%</div>' +
+                        '<div class="right-content"><div class="content"><strong>40</strong><p>OPEN DEFECTS</p></div>' +
+                        '<div class="content"><strong>47</strong><p>VEHICLE PASS</p></div></div></div></div></div><%= image_tag "/assets/auto_arrow.gif",:class => 'bottom-arrow'%></div>').appendTo('#data_container').ready(function () {
+                });
+            } else if (i == 4) {
+                console.log("4===" + i);
+                $('<div class="col-md-3"><div class="col-sm-9"><div class="box">' +
+                        '<div class="box-title">iQ1 Body</div><div style="display: inline-flex"><div class="left-number">86%</div>' +
+                        '<div class="right-content"><div class="content"><strong>40</strong><p>OPEN DEFECTS</p></div>' +
+                        '<div class="content"><strong>47</strong><p>VEHICLE PASS</p></div></div></div></div></div><%= image_tag "/assets/auto_arrow.gif" ,:class => 'left-arrow col-md-3' %> <%= image_tag "/assets/auto_arrow.gif" ,:class => 'bottom-arrow' %></div>').appendTo('#data_container').ready(function () {
+                });
+            } else if (i > 4 && i < 7) {
+                console.log("4<i<6===" + i);
+                $('<div class="col-md-3"><div class="col-sm-9"><div class="box">' +
+                        '<div class="box-title">iQ1 Body</div><div style="display: inline-flex"><div class="left-number">86%</div>' +
+                        '<div class="right-content"><div class="content"><strong>40</strong><p>OPEN DEFECTS</p></div>' +
+                        '<div class="content"><strong>47</strong><p>VEHICLE PASS</p></div></div></div></div></div><%= image_tag "/assets/auto_arrow.gif" ,:class => 'left-arrow col-md-3' %></div>').appendTo('#data_container').ready(function () {
+                });
+            } else if (i == 7) {
+                console.log("7===" + i);
+                $('<div class="col-md-3"><div class="col-sm-9"><div class="box">' +
+                        '<div class="box-title">iQ1 Body</div><div style="display: inline-flex"><div class="left-number">86%</div>' +
+                        '<div class="right-content"><div class="content"><strong>40</strong><p>OPEN DEFECTS</p></div>' +
+                        '<div class="content"><strong>47</strong><p>VEHICLE PASS</p></div></div></div></div></div></div>').appendTo('#data_container').ready(function () {
+                });
+            }
+        }
+    });
 </script>
+
+
+<style>
+    .background {
+        margin-top: 10px;
+        /*background: linear-gradient(to bottom right, #cccccc, #fefefe);*/
+        background: #000;
+        border-radius: 20px;
+        min-width: 1200px;
+    }
+
+    .message {
+        margin: 30px 0 0 30px;
+        display: flex;
+    }
+
+    .production {
+        width: 400px;
+        height: 60px;
+        border-radius: 15px;
+        color: #ffffff;
+        font: 40px 'Helvetica';
+        background: #535b6e;
+        margin: 10px 0 0 20px;
+        text-align: center;
+        line-height: 60px;
+    }
+
+    .message > img {
+        margin: 20px 0 0 0;
+    }
+
+    .message > span {
+        text-align: right;
+        font: 40px 'Helvetica';
+        color: #ffffff;
+        margin: 20px 0 0 50px;
+    }
+
+    /*Box Start*/
+    .box {
+        width: 280px;
+        height: 170px;
+        border-radius: 10px;
+        /*border: 2px solid #9000ff;*/
+        border: 2px solid deepskyblue;
+        margin: 10px;
+    }
+
+    .box-title {
+        height: 50px;
+        line-height: 50px;
+        background: #545D70;
+        color: #fefefe;
+        font-size: 24px;
+        text-align: center;
+        border-top-right-radius: 7px;
+        border-top-left-radius: 7px;
+    }
+
+    .left-number {
+        font: 50px 'Helvetica';
+        height: 100px;
+        line-height: 100px;
+        color: #3ed436;
+        margin-left: 10px;
+    }
+
+    .right-content {
+        height: 100px;
+        text-align: right;
+    }
+
+    .content:first-child {
+        margin: 5px 0 0 20px;
+    }
+
+    .content > strong {
+        font: 24px 'Helvetica';
+        color: #ffffff;
+    }
+
+    .content > p {
+        font: 14px 'HelveticaCondensed';
+        color: #bfbfbf;
+    }
+
+    /*Box End*/
+
+    /*Arrow Start*/
+
+    .right-arrow {
+        height: 48px;
+        margin-top: 80px;
+        width: 48px;
+        margin-left: 30px;
+    }
+
+    .bottom-arrow {
+        transform: rotate(90deg);
+        margin-left: 130px;
+        height: 48px;
+    }
+
+    .left-arrow {
+        height: 48px;
+        width: 48px;
+        margin-left: 30px;
+        transform: rotate(180deg);
+        margin-top: 80px;
+    }
+
+    /*Arrow End*/
+
+    .col-md-3 {
+        padding: 0;
+    }
+</style>
