--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -23,6 +23,9 @@
                 <a href="<%= departments_path %>"><%= t 'menu.entity' %></a>
               </li>
               <li>
+              <a href="<%= production_plans_path %>">生产计划</a>
+            </li>
+              <li>
                 <a href="/oauth/applications">OAuth</a>
               </li>
             </ul>
