--- a/app/views/production_plans/new.html.erb
+++ b/app/views/production_plans/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New production_plan</h1>
-
 <%= render 'form' %>
 
-<%= link_to 'Back', production_plans_path %>
+<%= link_to '返回', production_plans_path %>
