--- a/app/views/production_plans/edit.html.erb
+++ b/app/views/production_plans/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing production_plan</h1>
-
 <%= render 'form' %>
 
-<%= link_to 'Show', @production_plan %> |
-<%= link_to 'Back', production_plans_path %>
+<%= link_to '返回', production_plans_path %>
