--- a/app/views/production_plans/show.html.erb
+++ b/app/views/production_plans/show.html.erb
@@ -1,35 +1,39 @@
 <p id="notice"><%= notice %></p>
-
 <p>
-  <b>Assembly:</b>
-  <%= @production_plan.assembly %>
-</p>
-
-<p>
-  <b>Product line:</b>
+  <b>生产线:</b>
   <%= @production_plan.product_line %>
 </p>
 
 <p>
-  <b>Planned:</b>
+  <b>型号:</b>
+  <%= @production_plan.assembly %>
+</p>
+
+
+<p>
+  <b>计划:</b>
   <%= @production_plan.planned %>
 </p>
 
 <p>
-  <b>Produced:</b>
+  <b>完成:</b>
   <%= @production_plan.produced %>
 </p>
 
 <p>
-  <b>Date:</b>
-  <%= @production_plan.date %>
+  <b>下限:</b>
+  <%= @production_plan.trigger_min %>
 </p>
 
 <p>
-  <b>User:</b>
-  <%= @production_plan.user %>
+  <b>上限:</b>
+  <%= @production_plan.trigger_max %>
 </p>
 
+<p>
+  <b>时间:</b>
+  <%= @production_plan.date_display %>
+</p>
 
-<%= link_to 'Edit', edit_production_plan_path(@production_plan) %> |
-<%= link_to 'Back', production_plans_path %>
+<%= link_to '编辑', edit_production_plan_path(@production_plan) %> |
+<%= link_to '返回', production_plans_path %>
